server/k8s/project-ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: qubide

---
kind: Namespace
apiVersion: v1
metadata:
  name: qubide-main
