server/k8s/api-gateway.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: qubide-main

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: qubide-main
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      namespace: qubide-main
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: prakashbanjade/cloud-ide-api-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3002

---

apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: qubide-main
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      name: api
      port: 3002
      targetPort: 3002

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: qubide-main
spec:
  ingressClassName: nginx
  rules:
    - host: api-gateway.qubide.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3002
